complete mq interface
